Support resnet_parallel training

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,8 @@ cython_debug/
 # static files generated from Django application using `collectstatic`
 media
 static
+
+server.crt
+server.key
+ssl.conf
+*.svg
