--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@master
     - name: Update PyGrid Node Image
       if: github.repository == 'OpenMined/GridNode'
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: openmined/grid-node
         username: ${{ secrets.DOCKERHUB_USERNAME }}
